# flowlab

./: .gitignore  README.md
config/devices/: devices.yaml
config/instructions/: 4g.yaml  612.yaml  scpi.yaml
config/pipelines/: example_pipeline.yaml
flowlab/: Cargo.toml
flowlab-lib/: Cargo.toml
flowlab-lib/src/: lib.rs  parser.rs
flowlab-lib/src/device/: base.rs  mod.rs  tcp.rs
flowlab-lib/src/instruction/: base.rs  format.rs  mod.rs  pipeline.rs
flowlab-lib/tests/: unit_tests.rs
flowlab/src/: main.rs
