[package]
name = "flowlab-lib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SamuelHDieterich/flowlab"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.33.0", features = ["net", "io-util", "fs"] }

[features]
default = []
full = ["tcp"]
tcp = ["tokio/net"]
