[package]
name = "flowlab-lib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SamuelHDieterich/flowlab"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
serde_yaml = "0.9.25"
tera = { version = "1.19.1", default-features = false }
tokio = { version = "1.33.0", features = ["net", "io-util", "fs"] }
tracing = "0.1.37"

[features]
default = []
full = ["tcp"]
tcp = ["tokio/net"]

[dev-dependencies]
test-log = { version = "0.2.13", default-features = false, features = ["trace"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
